# vspell

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  compose.cpp  config.h.in  configure  configure.in  crosswin32.sh  debug.h  dictionary-test.cpp  dictionary.cpp  dictionary.h  distance.cpp  gui.cpp  param.h  personal.names  propername.cpp  sentence-test.cpp  sentence.cpp  spell.cpp  spell.h  syllable-test.cpp  syllable.cpp  wfst-test.cpp  wfst-train.cpp  wfst.cpp  wfst.h
include/: SLM2.h
libvspell/: .cvsignore  .gitignore  Doxyfile  Makefile.am  Makefile.in  bellman.cpp  bellman.h  cgen.cpp  cgen.h  dag.cpp  dag.h  dictionary.cpp  dictionary.h  distance.cpp  distance.h  keyboard.cpp  keyboard.h  libvspell.la  mystring.h  notes  penalty.cpp  penalty.h  pfs.cpp  pfs.h  posgen.cpp  posgen.h  propername.cpp  propername.h  sections.cpp  sentence.cpp  sentence.h  shuffle.cpp  shuffle.h  softcount.cpp  softcount.h  spell.cpp  spell.h  stridtree.cpp  stridtree.h  syllable.cpp  (+10 more)
libvspell/data/: first-names.lst  last-names.lst  ngram
libvspell/lm/: CM_funcs.c  CM_macros.h  err.c  err.h  hash.c  hash.h  linklist.c  list.h  lm_3g.c  lm_3g.h  log.h  posixwin32.h  s2types.h  strcasecmp.c
scripts/: convert.sh  gettags.pl  getvan.pl  h2t.pl  list-entity.pl  personal-name-extract-from-hcmuns.pl  punct.pl  standardize-personal-name.c  testdoc-extract.pl  vnexpress.pl  vspell-wrapper.sh  z.xslt  zenity.sh
src/: .gitignore  Makefile  binlm2arpa.c  bo_ng_prob.c  compute_back_off.c  compute_unigram.c  counts.c  evallm.c  get_ngram.c  idngram.h  idngram2lm.c  idngram2lm.h  idngram2stats.c  increment_context.c  interpolate.c  load_lm.c  lookup_index_of.c  ngram.h  ngram2mgram.c  text2idngram.c  text2wngram.c  wfreq2vocab.c  wngram2idngram.c  write_lms.c
src/rr_libs/: quit.c  sih.c
tests/: Makefile.am  Makefile.in  all-words-test.cpp  dictionary-test.cpp  distance-test.cpp  ngram  posgen-test.cpp  sc-train.cpp  section-test.cpp  segm-test.cpp  sentence-test.cpp  shortestpath.cpp  std-syllable.cpp  syllable-gen.cpp  syllable-test.cpp  sytrain.cpp  tokenize-test.cpp  vspell-check.cpp  wfst-test.cpp  wfst-train.cpp  wordlist.wl
thesis/: .gitignore  Makefile  diagram.dia  main.tex  overall.dia  reference.bib  syllable.dot  wordlattice.dot  wordlattice1.dot  wordlattice2.dot
ui/: .cvsignore  Makefile.am  cui.cpp  gui.cpp
ui/cli/: .gitignore  Makefile.am  main.cpp
ui/gtk/: .gitignore  Makefile.am  main.cpp
utils/: .gitignore  Makefile.am  dag-test.cpp  data.test  dictionary-test.cpp  gen-tests.cpp  keyb-test.cpp  lattice-test.cpp  lattice2dot.cpp  lm-test.cpp  pf.c  pfs-test.cpp  sc-train.cpp  sc2wngram.c  segm-test.cpp  sentence-test.cpp  shortestpath.cpp  softcount.cpp  softcount.h  std-syllable.cpp  syllable-test.cpp  sytrain.cpp  tokenize-test.cpp  train  utf8toviscii.cpp  vspell-check.cpp  vspell-report.pl  wfst-train.cpp
vspell/: Makefile.am  Makefile.in  TODO  gui.cpp  vspell.cpp
