AC_INIT(vspell,1.0)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR(vspell/gui.cpp)
AM_CONFIG_HEADER(config.h)

AC_PROG_CXX
AC_PROG_LIBTOOL

VSPELL_PACKAGES=gtk+-2.0
PKG_CHECK_MODULES(VSPELL, $VSPELL_PACKAGES)
AC_SUBST(VSPELL_CFLAGS)
AC_SUBST(VSPELL_LIBS)

AC_CONFIG_FILES(Makefile vspell/Makefile libvspell/Makefile libsrilm/Makefile tests/Makefile)
AC_OUTPUT
