noinst_LIBRARIES = libvspell.a
libvspell_a_SOURCES = types.h\
	syllable.cpp syllable.h\
	dictionary.cpp dictionary.h wordnode.h\
	propername.cpp propername.h\
	sentence.cpp sentence.h\
	distance.cpp distance.h\
	spell.cpp spell.h vspell.h\
	pfs.cpp pfs.h\
	words.cpp\
	warch.cpp\
	tokenize.ll tokenize.h\
	debug.h mystring.h\
	posgen.cpp posgen.h\
	cgen.h cgen.cpp\
	boost\
	keyboard.h keyboard.cpp\
	shuffle.h shuffle.cpp\
	dag.h dag.cpp\
	bellman.cpp bellman.h\
	penalty.h penalty.cpp\
	lm/lm_3g.c lm/err.c lm/salloc.c lm/list.c lm/hash.c lm/CM_funcs.c lm/linklist.c lm/strcasecmp.c
#data_DATA = data/wordlist.wl data/ngram data/last-names.lst
